--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ whitenoise==3.3.0
 dj-database-url==0.4.2
 psycopg2==2.6.2
 django-rest-framework-social-oauth2==1.0.5
-django-bootstrap3-8.2.1
+django-bootstrap3==8.2.1
